<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_default">Blankcanvas</string>
    <string name="app_name">Blankcanvas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_account"></string>
    <string name="email"> University Email Address</string>
    <string name="password"> Password</string>
    <string name="login">Login</string>
    <string name="CreateAccountText">Create Account</string>
    <string name="forgotPassword"> Forgot your password?</string>
    <string name="newAccountText">Don\'t have an account? </string>
    <string name="SignUpText"> Sign Up</string>
    <string name="title_activity_beginning"></string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_profile"></string>
    <string name="title_activity_edit_profile"></string>
    <string name="title_activity_tutor_profile"></string>
    <string name="title_activity_edit_tutor_profile"></string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_closed">Close Drawer</string>

    <string name="prompt">Filters</string>
    <string name="on_create_new_account">Thank you for creating an account with Blankcanvas! A confirmation link has been sent to the email you provided. Please confirm your email to login and get started. </string>

    <string-array name="drawable_list_items">
        <item>Search Available Tutors</item>
        <!--<item>SEARCH GROUP SESSIONS</item>
        <item>CREATE GROUP SESSION</item>!-->
    </string-array>

    <string-array name="drawable_tutor_list_items">
        <item>My Profile</item>
    </string-array>

    <string name="title_activity_tutor_list"></string>
    <string name="title_activity_read_only_tutor_profile"></string>
    <string name="title_activity_student_tutor_profile_container"></string>
    <string name="hello_world"></string>
    <string name="title_activity_edit_student_and_tutor_profile">EditStudentAndTutorProfileActivity</string>
    <string name="title_activity_session_start">SessionStartActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_tutor_filter">TutorFilterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
